--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
 
 body {
   font-family: 'Permanent Marker', cursive;
   margin: 0;
-  font-size: 1.5em;
+  font-size: 2em;
   text-align: center;
   background: #0a192b;
   color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+h2 {
+  margin-top: 0px;
+  margin-bottom: 50px;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 3rem;
+  letter-spacing: 0.15rem;
+  text-transform: uppercase;
+  color: rgba(246, 250, 24, 0.973);
+  text-shadow: -4px 4px #ef3550,
+               -8px 8px #f48fb1,
+               -12px 12px #7e57c2,
+               -16px 16px #2196f3,
+               -20px 20px #26c6da,
+               -24px 24px #43a047,
+               -28px 28px #eeff41,
+               -32px 32px #f9a825,
+               -36px 36px #ff5722;
+}
+
